--- a/schema/codegen-schema/prescriptions/drug.canonical.yaml
+++ b/schema/codegen-schema/prescriptions/drug.canonical.yaml
@@ -1,5 +1,5 @@
 kinds:
-    -   id: https://www.boundedinfinity.com/canonical/prescriptions/drug
+    -   id: canonical:prescriptions/drug
         name: id
         type: object
         description: Drug descriptor
@@ -16,7 +16,7 @@ kinds:
                         max: 50
             -   ref: https://www.boundedinfinity.com/canonical/prescriptions/drug-class
 
-    -   id: https://www.boundedinfinity.com/canonical/prescriptions/drug-class
+    -   id: canonical:prescriptions/drug-class
         name: id
         type: object
         description: Drug descriptor
@@ -44,7 +44,7 @@ kinds:
                             -   name: description
                                 type: string
 
-    -   id: https://www.boundedinfinity.com/canonical/prescriptions/drug-side-effect-type
+    -   id: canonical:prescriptions/drug-side-effect-type
         name: id
         type: enum
         description: Drug side effect
