--- a/schema/codegen-schema/prescriptions/drug.canonical.yaml
+++ b/schema/codegen-schema/prescriptions/drug.canonical.yaml
@@ -1,53 +1,53 @@
 kinds:
-    -   id: canonical:prescriptions/drug
-        name: id
-        type: object
-        description: Drug descriptor
-        properties:
-            -   name: generic-name
-                type: string
-                description: The drug generic name.
-                max: 50
-            -   name: brand-name
-                description: The drug generic name.
-                type: array
-                items:
-                    -   type: string
-                        max: 50
-            -   ref: canonical://prescriptions/drug-class
+    - id: canonical:prescriptions/drug
+      name: id
+      kind: object
+      description: Drug descriptor
+      properties:
+          - name: generic-name
+            kind: string
+            description: The drug generic name.
+            max: 50
+          - name: brand-name
+            description: The drug generic name.
+            kind: array
+            items:
+                - kind: string
+                  max: 50
+          - ref: canonical://prescriptions/drug-class
 
-    -   id: canonical:prescriptions/drug-class
-        name: id
-        type: object
-        description: Drug descriptor
-        properties:
-            -   name: name
-                type: string
-                description: The name of the drug class
-                max: 50
-            -   name: description
-                description: The description of the drug class.
-                type: string
-                max: 200
-            -   name: usage
-                type: array
-                min: 1
-                items:
-                    -   type: string
-            -   name: side-effects
-                type: array
-                min: 1
-                items:
-                    -   type: object
-                        properties:
-                            -   ref: canonical://prescriptions/drug-side-effect-type
-                            -   name: description
-                                type: string
+    - id: canonical:prescriptions/drug-class
+      name: id
+      kind: object
+      description: Drug descriptor
+      properties:
+          - name: name
+            kind: string
+            description: The name of the drug class
+            max: 50
+          - name: description
+            description: The description of the drug class.
+            kind: string
+            max: 200
+          - name: usage
+            kind: array
+            min: 1
+            items:
+                - kind: string
+          - name: side-effects
+            kind: array
+            min: 1
+            items:
+                - kind: object
+                  properties:
+                      - ref: canonical://prescriptions/drug-side-effect-type
+                      - name: description
+                        kind: string
 
-    -   id: canonical:prescriptions/drug-side-effect-type
-        name: id
-        type: enum
-        description: Drug side effect
-        elements:
-            -   name: name
-                type: string
+    - id: canonical:prescriptions/drug-side-effect-type
+      name: id
+      kind: enum
+      description: Drug side effect
+      elements:
+          - name: name
+            kind: string
